@@ -1,3 +1,8 @@
+2011-07-07  Jakub Jelinek  <jakub@redhat.com>
+
+	PR middle-end/49640
+	* gcc.dg/gomp/pr49640.c: New test.
+
 2011-07-06  Thomas Koenig  <tkoenig@gcc.gnu.org>
 
 	PR fortran/49479
